v0.2.2:
 - Bug fixing
   * Fix race condition on wallet initialization
   * Avoid the wizard to be shown more than once
   * Don't show a "green" network status if the network can reach us back
   * Fix application not closing when trying to exit in the middle of a network connection attempt

v0.2.1:
 - Bug fixing
   * Prevent multiple running instances of the application
   * Fix compilation issues on IntelliJ IDEA
   * Fix opening of external links on Linux

v0.2.0:
 - Add console UI (coinffeine-headless)
 - Broker load tests added (coinffeine-benchmark)
 - Exchange status names changed to make them clearer
 - Bug fixing
   * Prevent orders to be cancelled twice
   * Allow the app to start without network access
   * Orders were not marked as completed when restored from disk

v0.1.1:
 - Fix missing msvcr100.dll in Windows platform