@@ -4,6 +4,7 @@ v0.2.2:
    * Avoid the wizard to be shown more than once
    * Don't show a "green" network status if the network can reach us back
    * Fix application not closing when trying to exit in the middle of a network connection attempt
+   * Log messages that cannot be serialized
 
 v0.2.1:
  - Bug fixing
